--- a/.env
+++ b/.env
@@ -1,10 +1,20 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
 DFX_VERSION='0.20.0'
-DFX_NETWORK='ic'
-CANISTER_CANDID_PATH_NFTONBASE_BACKEND='/home/sept_wolf/Ichiro/Bridge23/Mint_NFT_on_Base_Chain/src/NFTonBase_backend/NFTonBase_backend.did'
-CANISTER_ID_NFTONBASE_FRONTEND='tdxl2-fyaaa-aaaak-akvha-cai'
-CANISTER_ID_NFTONBASE_BACKEND='tkuag-tqaaa-aaaak-akvgq-cai'
-CANISTER_ID='tdxl2-fyaaa-aaaak-akvha-cai'
-CANISTER_CANDID_PATH='/home/sept_wolf/Ichiro/Bridge23/Mint_NFT_on_Base_Chain/.dfx/ic/canisters/NFTonBase_frontend/assetstorage.did'
+DFX_NETWORK='local'
+CANISTER_CANDID_PATH_NFTONBASE_BACKEND='/Users/as/projects/bridge23/app/Mint_NFT_on_Base_Chain/src/NFTonBase_backend/NFTonBase_backend.did'
+CANISTER_ID_NFTONBASE_FRONTEND='aax3a-h4aaa-aaaaa-qaahq-cai'
+CANISTER_ID_NFTONBASE_BACKEND='ahw5u-keaaa-aaaaa-qaaha-cai'
+CANISTER_ID='aax3a-h4aaa-aaaaa-qaahq-cai'
+CANISTER_CANDID_PATH='/Users/as/projects/bridge23/app/Mint_NFT_on_Base_Chain/.dfx/local/canisters/NFTonBase_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
+
+# # DFX CANISTER ENVIRONMENT VARIABLES
+# DFX_VERSION='0.20.0'
+# DFX_NETWORK='ic'
+# CANISTER_CANDID_PATH_NFTONBASE_BACKEND='/home/sept_wolf/Ichiro/Bridge23/Mint_NFT_on_Base_Chain/src/NFTonBase_backend/NFTonBase_backend.did'
+# CANISTER_ID_NFTONBASE_FRONTEND='tdxl2-fyaaa-aaaak-akvha-cai'
+# CANISTER_ID_NFTONBASE_BACKEND='tkuag-tqaaa-aaaak-akvgq-cai'
+# CANISTER_ID='tdxl2-fyaaa-aaaak-akvha-cai'
+# CANISTER_CANDID_PATH='/home/sept_wolf/Ichiro/Bridge23/Mint_NFT_on_Base_Chain/.dfx/ic/canisters/NFTonBase_frontend/assetstorage.did'
+# # END DFX CANISTER ENVIRONMENT VARIABLES
