--- a/src/NFTonBase_frontend/package.json
+++ b/src/NFTonBase_frontend/package.json
@@ -19,15 +19,16 @@
     "@dfinity/auth-client": "^1.3.0",
     "@dfinity/candid": "^0.20.0",
     "@dfinity/principal": "^0.20.0",
+    "@junobuild/core": "^0.0.54",
     "@quasar/extras": "^1.16.4",
     "connect": "^3.7.0",
+    "ethers": "5.7",
     "helmet": "^7.1.0",
+    "nanoid": "^5.0.7",
     "pinia": "^2.1.7",
     "quasar": "^2.16.0",
     "tesseract.js": "^5.1.0",
     "vue": "^3.4.21",
-    "nanoid": "^5.0.7",
-    "ethers": "5.7",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
