--- a/src/NFTonBase_frontend/package.json
+++ b/src/NFTonBase_frontend/package.json
@@ -32,6 +32,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@junobuild/config": "^0.0.13",
     "@quasar/vite-plugin": "^1.7.0",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
