Fix route issue

--- a/src/NFTonBase_frontend/package.json
+++ b/src/NFTonBase_frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "NFTonBase_frontend",
-  "version": "0.0.0",
+  "name": "alpha-gate23 ",
+  "version": "0.8.1",
   "private": true,
   "type": "module",
   "scripts": {
