add payment syste

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 
 # DFX CANISTER ENVIRONMENT VARIABLES
-DFX_VERSION='0.19.0'
-DFX_NETWORK='local'
-CANISTER_CANDID_PATH_NFTONBASE_BACKEND='/Users/nezovskii/development/Gate23/src/NFTonBase_backend/NFTonBase_backend.did'
-CANISTER_ID_NFTONBASE_FRONTEND='ctiya-peaaa-aaaaa-qaaja-cai'
-CANISTER_ID_NFTONBASE_BACKEND='c2lt4-zmaaa-aaaaa-qaaiq-cai'
-CANISTER_ID='ctiya-peaaa-aaaaa-qaaja-cai'
-CANISTER_CANDID_PATH='/Users/nezovskii/development/Gate23/.dfx/local/canisters/NFTonBase_frontend/assetstorage.did'
+DFX_VERSION='0.21.0'
+DFX_NETWORK='ic'
+CANISTER_CANDID_PATH_NFTONBASE_BACKEND='/home/sept_wolf/Ichiro/Bridge23/Gate23/src/NFTonBase_backend/NFTonBase_backend.did'
+CANISTER_ID_NFTONBASE_FRONTEND='tdxl2-fyaaa-aaaak-akvha-cai'
+CANISTER_ID_NFTONBASE_BACKEND='tkuag-tqaaa-aaaak-akvgq-cai'
+CANISTER_ID='tdxl2-fyaaa-aaaak-akvha-cai'
+CANISTER_CANDID_PATH='/home/sept_wolf/Ichiro/Bridge23/Gate23/.dfx/ic/canisters/NFTonBase_frontend/assetstorage.did'
 # END DFX CANISTER ENVIRONMENT VARIABLES
 
 # # DFX CANISTER ENVIRONMENT VARIABLES
