--- a/src/NFTonBase_backend/Cargo.toml
+++ b/src/NFTonBase_backend/Cargo.toml
@@ -21,3 +21,5 @@ http = "1.1.0"
 serde_bytes = "0.11.15"
 ic-stable-memory = "0.4"
 ic-stable-structures = "0.6.2"
+sha2 = "0.10.8"
+ic-ledger-types = "0.12.0"
