--- a/src/NFTonBase_frontend/package.json
+++ b/src/NFTonBase_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alpha-gate23_frontend",
+  "name": "NFTonBase_frontend",
   "version": "0.8.1",
   "private": true,
   "type": "module",
